--- a/project/messages.pot
+++ b/project/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2025-05-19 08:00-0300\n"
+"POT-Creation-Date: 2025-05-19 08:11-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -377,8 +377,8 @@ msgid "Singer:"
 msgstr ""
 
 #: templates/musics.html:20
-msgid "Artist - Music"
-msgstr ""
+msgid "\"Artist - Music\""
+msgstr "\"Artista - Música\""
 
 #: templates/musics.html:22
 msgid "Search Youtube"
